Ajuste de titulos de notebooks

--- a/Lab 7 modelo.ipynb
+++ b/Lab 7 modelo.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d944b012",
+   "metadata": {},
+   "source": [
+    "# Laboratorio 7\n",
+    "## Security Data Science\n",
+    "## Universidad del Valle de Guatemala\n",
+    "\n",
+    "Andrés de la Roca - 20332"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4716c24e",
+   "metadata": {},
+   "source": [
+    "### Primera Parte - Creacion de la red neuronal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "242a1ea3",
